# PaintTheMost-Game

./: CMakeLists.txt  README.md
game/: game-test  game-test.cpp  odpalanie.md
game/SFML-2.6.1/lib/: sfml-audio-d.lib  sfml-audio-s.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics-s.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-network-s-d.lib  sfml-network-s.lib  sfml-network.lib  sfml-system-d.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-system.lib  sfml-window-d.lib  sfml-window-s.lib  sfml-window.lib
src/client/: client  client.cpp  client.h
src/server/: server  server.cpp  server.h
src/shared/: communication.cpp  communication.h
